package org.example;

public class Variable {

    private Type type;
    private Expression expression;

    public Variable(Type type, Expression expression){
        this.type = type;
        this.expression = expression;
    }

    public Type getType() {
        return type;
    }

    public void setType(Type type) {
        this.type = type;
    }

    public Expression getExpression() {
        return expression;
    }

    public void setExpression(Object object) {
        this.expression = expression;
    }
}
